// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile lead supplement landscape huge 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "height": 600,
      }
    }
  >
    <Image
      aspectRatio={1.25}
      style={
        Object {
          "height": 600,
        }
      }
      uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1250%2C1000%2C627%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": undefined,
            "flex": 1,
            "padding": 30,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#1D1D1B"
            hide={false}
            isVideo={false}
            markAsRead={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Regular",
              "fontSize": 40,
              "fontWeight": "normal",
              "includeFontPadding": false,
              "lineHeight": 40,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#1D1D1B",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04-Regular",
              "fontSize": 15,
              "lineHeight": 22,
              "marginBottom": 0,
            }
          }
        >
          <Text>
            
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile lead supplement landscape medium 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "height": 600,
      }
    }
  >
    <Image
      aspectRatio={1.25}
      style={
        Object {
          "height": 600,
        }
      }
      uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1250%2C1000%2C627%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": undefined,
            "flex": 1,
            "padding": 30,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#1D1D1B"
            hide={false}
            isVideo={false}
            markAsRead={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Regular",
              "fontSize": 38,
              "fontWeight": "normal",
              "includeFontPadding": false,
              "lineHeight": 38,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#1D1D1B",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04-Regular",
              "fontSize": 15,
              "lineHeight": 22,
              "marginBottom": 0,
            }
          }
        >
          <Text>
            
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile lead supplement landscape wide 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F0F0F0",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "height": 600,
      }
    }
  >
    <Image
      aspectRatio={1.25}
      style={
        Object {
          "height": 600,
        }
      }
      uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1250%2C1000%2C627%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": undefined,
            "flex": 1,
            "padding": 30,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#1D1D1B"
            hide={false}
            isVideo={false}
            markAsRead={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Regular",
              "fontSize": 38,
              "fontWeight": "normal",
              "includeFontPadding": false,
              "lineHeight": 38,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#1D1D1B",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04-Regular",
              "fontSize": 15,
              "lineHeight": 22,
              "marginBottom": 0,
            }
          }
        >
          <Text>
            
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            Critically, he said this would not necessarily require the withdrawal agreement to be reopened but could instead be done by a legally binding codicil. He added that should his amendment be passed in a Commons vote tomorrow it would give “enormous firepower” to the prime minister when she returned to Brussels.
          </Text>
          <Text>
             
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;
